--- a/apis.html
+++ b/apis.html
@@ -18,10 +18,23 @@ GET: http://localhost:8080/vacancy/40918585
 ###favorites
 GET: http://localhost:8080/favorites/employer
 
-POST
-curl --header "Content-Type: application/json" --data "{\"employer_id\":2392442,\"comment\":\"test\"}" http://localhost:8080/favorites/employer
+POST - create new one
+curl --header "Content-Type: application/json" --data "{\"employer_id\":605490,\"comment\":\"test\"}" http://localhost:8080/favorites/employer
 
 36227
 5257456
 4849846
 2392442
+605490
+
+PUT - update comment
+curl --header "Content-Type: application/json" --request PUT --data "change comment" http://localhost:8080/favorites/employer/36227
+
+POST - refresh
+curl  --request POST http://localhost:8080/favorites/employer/5257456/refresh
+
+PUT - delete
+curl --header "Content-Type: application/json" --request DELETE http://localhost:8080/favorites/employer/2392442
+
+
+
